--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,9 @@ jobs:
 
       - uses: docker://pandoc/core:2.9
         with:
-          args:  -s manual.md --toc -o example2.html --metadata title="Manual de Usuario"
+          args:  -s manual.md --toc -o manual.html --metadata title="Manual de Usuario"
           
+      - uses: actions/upload-artifact@v2
+        with:
+          name: manual.html
+          path: ./manual.html
