--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,10 @@ jobs:
         with:
           name: manual.html
           path: ./manual.html
-
-      - uses: docker://pandoc/core:2.9
-        with:
-          args:  -s manual.md --toc -o manual.pdf --metadata title="Manual de Usuario"
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: manual.pdf
-          path: ./manual.pdf
+          
+      - name: commit
+        run: |
+          # Stage the file, commit and push
+          git add manual.html
+          git commit -m "Publish new Manual"
+          git push origin master          
