--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
           # Stage the file, commit and push
           git add manual.html
           git commit -m "Publish new Manual"
-          git push origin master          
+          git push          
