--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Install xmllint
+        run: sudo apt-get install -y pdflatex
+      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
@@ -44,6 +47,6 @@ jobs:
       - name: commit
         run: |
           # Stage the file, commit and push
-          git add manual.html
+          git add .
           git commit -m "Publish new Manual"
           git push          
