--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Install xmllint
-        run: sudo apt-get install texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
+      #- name: Install xmllint
+      #  run: sudo apt-get install texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
       
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
@@ -30,9 +30,9 @@ jobs:
         with:
           args:  -s manual.md --toc -o manual.html --metadata title="Manual de Usuario"
 
-      - uses: docker://pandoc/core:2.9
-        with:
-          args:  -s manual.md --toc -o manual.pdf --metadata title="Manual de Usuario"
+      #- uses: docker://pandoc/core:2.9
+      #  with:
+      #    args:  -s manual.md --toc -o manual.pdf --metadata title="Manual de Usuario"
 
       - uses: actions/upload-artifact@v2
         with:
