--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           args:  -s manual.md --toc -o manual.html --metadata title="Manual de Usuario"
 
-      - uses: docker://pandoc/latex:2.9
+      - uses: docker://pandoc/core:2.9
         with:
           args:  -s manual.md --toc -o manual.pdf --metadata title="Manual de Usuario"
 
